# doppel

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/models/: bloomy_water.glb  dither_water.glb  floor_bloomy.glb  floor_dither.glb  jumpnruntest.glb  jumpnruntest1.glb  note.glb  note_closeup.glb  remote_dynamic.glb  remote_static.glb  water_bloomy.glb
assets/settings/: camera_back.ini  camera_bonus.ini  camera_down.ini  camera_front.ini  camera_front_down.ini  camera_front_left.ini  camera_front_right.ini  camera_front_up.ini  camera_left.ini  camera_left_down.ini  camera_left_up.ini  camera_right.ini  camera_right_down.ini  camera_right_up.ini  camera_up.ini  renderer_culling.ini  renderer_culling_normals.ini  renderer_culling_texcoords.ini  renderer_culling_wireframe.ini  renderer_nodepth.ini  renderer_normals.ini  renderer_standard.ini  renderer_texcoords.ini  renderer_wireframe.ini  window.ini
assets/shaders/: composite.frag  composite.vert  gaussianBlur.frag  gaussianBlur.vert  infPlane.frag  infPlane.vert  orderedDither.frag  orderedDither.vert  shadow.frag  shadow.vert  simpleColor.frag  simpleColor.vert  simpleColorTess.tesc  simpleColorTess.tese  simpleColorTess.vert  sky.frag  sky.vert  texture.frag  texture.vert  textureNormal.frag  textureNormal.vert  textureNormalBloom.frag  transition.frag  transition.vert  water.frag  water.vert
include/: tiny_gltf.h
src/: Camera.h  GLTFLoader.cpp  GLTFLoader.h  Geometry.cpp  Geometry.h  INIReader.h  Light.h  Main.cpp  Material.cpp  Material.h  ObjectPicker.cpp  ObjectPicker.h  POVCamera.cpp  POVCamera.h  PathUtils.h  Physics.cpp  Physics.h  PressurePlateTriggerListener.h  RenderObject.cpp  RenderObject.h  Shader.h  Skybox.cpp  Skybox.h  TessellationShader.cpp  TessellationShader.h  Texture.h  Utils.h
src/GameLogic/: Game.cpp  Game.h  GameState.cpp  GameState.h  Player.cpp  Player.h  PlayerState.cpp  PlayerState.h
src/Render/: BasePass.cpp  BasePass.h  RenderPass.h  ShadowPass.cpp  ShadowPass.h
src/imgui/: GUIManager.cpp  GUIManager.h  HeadsUpDisplay.cpp  HeadsUpDisplay.h  Menu.cpp  Menu.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
